<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_text_out"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.42"
        android:inputType="textMultiLine"
        android:text="@string/PrintContent" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/linearLayout_FontGrayScale"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/fontGrayscaleName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fontGrayscaleName" />

		<EditText
		    android:id="@+id/fontGrayscaleValue"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:layout_weight="0.07"
		    android:inputType="number"
		    android:text="@string/default_font_gray_scale" />

        <TextView
            android:id="@+id/fontGrayScaleRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.06"
            android:text="@string/fontGrayScaleRange" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout_Button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.03"
            android:text="@string/send" />

        <Button
            android:id="@+id/button_print"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:text="@string/Print" />

        <Button
            android:id="@+id/button_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.02"
            android:text="@string/Clear" />

    </LinearLayout>

</LinearLayout>